# non_parametric_predictive_model_FOREX

./: .gitignore  LICENSE  README.md  config.py  pipeline_main.py  pyproject.toml
qfin_synth/: models.py  nw.py  sde.py  state.py  trades.py  tuning.py  validation.py  walkforward.py
