[project]
name = "non-parametric-predictive-model-forex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.0.0",
    "ta>=0.11.0",
]
